--- a/scss/blocks/sections.scss
+++ b/scss/blocks/sections.scss
@@ -5,22 +5,19 @@
     min-height: rem(650px);
     height: 100vh;
 
-    
     @include tablets{
-        height: 100%;
+        min-height: 1000px;
     }
     @include phones{
-        height: 100%;
-     
+        min-height: 800px;
     }
 }
 .sections__container{
     display: flex;
     flex-direction: column;
-    justify-content:space-between;
+    justify-content:center;
+     
     
-    height: 100%;
-    background: url("../img/bg/bars.png") right center/50% no-repeat;
     padding: rem(24px) rem(0px) rem(59px) rem(0px);
     
     @include tablets{
@@ -28,7 +25,7 @@
         
     }
     @include phones{
-        justify-content: space-between;
+     
     }
 
     
