--- a/css/main.css
+++ b/css/main.css
@@ -561,6 +561,7 @@ img {
   .hero__title {
     font-size: 2.2222222222rem;
     padding: 0 0.5555555556rem;
+    margin-bottom: 0.4444444444rem;
   }
 }
 
@@ -820,7 +821,7 @@ img {
 }
 @media screen and (max-width: 480px) {
   .sections {
-    min-height: 800px;
+    min-height: 775px;
   }
 }
 
