--- a/scss/layout/variables.scss
+++ b/scss/layout/variables.scss
@@ -6,8 +6,8 @@ $z-fixed-menu:100;
     $baseFontSize: 18px;
 /*var titles*/
     $titleSizeXl: 48px;
-    $titleSizeL: rem(36px);
-    $titleSizeM: rem(27px);
+    $titleSizeL: 36px;
+    $titleSizeM: 27px;
 
 /*var colors*/
     $light:#F2F5F4;
